<resources>
    <string name="app_name">Sofind</string>
    <string name="YOUR_SOUNDS">Your sounds</string>
    <string name="WORLD_SOUNDS">World sounds</string>
    <string name="CREATE_SOUND">Create sound</string>
    <string name="EDIT_PROFILE">Edit profile</string>
    <string name="SETTING">Setting</string>
    <string name="LOG_OUT">Log out</string>
    <string name="HEADER_BACKGROUND">Header background</string>
    <string name="SEARCH">Search</string>
    <string name="SAVE">Save</string>
    <string name="SUCCESS_LOGIN">Success login</string>
    <string name="EMAIL">Email</string>
    <string name="PASSWORD">Password</string>
    <string name="REGISTER">Register</string>
    <string name="REGISTRATION_FORM">Registration form</string>
    <string name="YOUR_NAME">Your name</string>
    <string name="YOUR_SURNAME">Your surname</string>
    <string name="MALE">Male</string>
    <string name="FEMALE">Female</string>
    <string name="YOUR_AGE">Your age</string>
    <string name="LOG_IN">Log in</string>
    <string name="SAVE_NEW_USER">Save new user</string>
    <string name="NOT_CORRECT_INPUT_EMAIL">Not correct input email</string>
    <string name="SHORT_PASSWORD">Password must be has </string>
    <string name="INVALID_PASSWORD_OR_EMAIL">Invalid password or email</string>
    <string name="MISTAKE">Mistake</string>
    <string name="INPUT_MIN_TWO_SYMBOL">Must be has </string>
    <string name="INPUT_CORRECT_AGE">Input correct age</string>
    <string name="MORE_SYMBOLS">Max number of charaters is</string>
    <string name="NEW_SOUND">Create new sound of mind</string>
    <string name="NEW_SOFIND">New sofind item</string>
    <string name="SEE_NEW_ITEM">See new item</string>
    <string name="NEW_PASSWORD">New password</string>
    <string name="CONFIRM_PASSWORD">Confirm password</string>
    <string name="SAVE_PROFILE">Save profile</string>
    <string name="SAVE_WITH_CONFIRM">Password for save profile updates</string>
    <string name="INCORRECT_PASSWORD">Incorrect password</string>
    <string name="CONFIRM_PASSWORD_NOT_EQUALS">Confirm password not equals</string>
    <string name="NOT_COMPLIT_FORM">Not correct complete form</string>
    <string name="ARE_YOU_WANT_LEAV">Are you want leave application?</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="SELECT_DAY_NIGHT_MOD">Select day/night mode</string>
    <string name="APPLY_CHANGES">Apply changes</string>
    <string name="CHOSE_LANGUAGE">Chose language</string>
    <string name="SELECT_ACCENT_COLOR">Select accent color</string>
    <string name="HEADER_IMAGE">Header image</string>
    <string name="YOUR_CURRENT_PASSWORD">You current password</string>
    <string name="YOUR_SOUND">Type your sound</string>
    <string name="DESCRIPTION_MESSAGE_BODY">Your message can not less than 1 and more 100 characters</string>
    <string name="EXAMPLE">Example of sound</string>
    <string name="INPUT_MESSAGE">Input your message:</string>
    <string name="TEST_NUMBER">3</string>
    <string name="ITEM">Item</string>
    <string name="SUCCES_SAVE_INFORMATION">Success save information</string>
    <string name="SUCCESS_SAVE_NEW_SOUND">Success save new sound</string>
    <string name="NOT_SAVE_NEW_SOUND">Not save new sound</string>

    <string-array name="SETTING_ARRAY">
        <item>Change language</item>
        <item>Change accent color</item>
        <item>Change mode</item>
    </string-array>
    <string-array name="LANGUAGES">
        <item>be</item>
        <item>en</item>
        <item>ru</item>
    </string-array>
    <string-array name="LANGUAGES_FULL_NAME">
        <item>Беларуская</item>
        <item>English</item>
        <item>Русский</item>
    </string-array>
</resources>
