<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/feed_menu_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/user_sounds_menu_item"
            android:icon="@drawable/ic_log_out"
            android:checked="true"
            android:title="@string/YOUR_SOUNDS" />
        <item
            android:id="@+id/world_sounds_menu_item"
            android:icon="@drawable/ic_log_out"
            android:title="@string/WORLD_SOUNDS" />
        <item
            android:id="@+id/create_new_sounds_menu_item"
            android:icon="@drawable/ic_log_out"
            android:title="@string/CREATE_SOUND" />
    </group>
    <group
        android:id="@+id/setting_menu_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/edit_profile_menu_item"
            android:icon="@drawable/ic_log_out"
            android:title="@string/EDIT_PROFILE" />
        <item
            android:id="@+id/setting_menu_item"
            android:icon="@drawable/ic_settings_gears"
            android:title="@string/SETTING" />
    </group>
    <group
        android:id="@+id/logout_menu_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/log_out_menu_item"
            android:icon="@drawable/ic_log_out"
            android:title="@string/LOG_OUT" />
    </group>
</menu>