<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.kiolk.sofind.ui.activities.registration.RegistrationActivity">


    <EditText
        android:id="@+id/email_edit_text"
        style="@style/EditBlockStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EMAIL"
        android:inputType="textEmailAddress"
        android:paddingTop="100dp" />


    <EditText
        android:id="@+id/password_edit_text"
        style="@style/EditBlockStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_edit_text"
        android:hint="@string/PASSWORD"
        android:inputType="textPassword" />


    <LinearLayout
        android:id="@+id/registration_form_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edit_text"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/BIG_PADDING"
            android:paddingLeft="@dimen/BIG_PADDING"
            android:paddingTop="@dimen/BIG_PADDING"
            android:text="@string/REGISTRATION_FORM" />

        <EditText
            android:id="@+id/user_name_edit_text"
            style="@style/EditBlockStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/YOUR_NAME"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/surname_edit_text"
            style="@style/EditBlockStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/YOUR_SURNAME"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/age_edit_text"
            style="@style/EditBlockStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/YOUR_AGE"
            android:inputType="number" />


        <RadioGroup
            android:id="@+id/sex_radio_group"
            style="@style/EditBlockStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/BIG_PADDING"
            android:paddingTop="@dimen/BIG_PADDING">

            <RadioButton
                android:id="@+id/male_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingRight="@dimen/BIG_PADDING"
                android:text="@string/MALE" />

            <RadioButton
                android:id="@+id/female_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingRight="@dimen/BIG_PADDING"
                android:text="@string/FEMALE" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_block_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_form_linear_layout"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/log_in_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LOG_IN" />

        <Button
            android:id="@+id/register_new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/REGISTER" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/registration_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttons_block_linear_layout"
        android:layout_centerInParent="true"
        android:visibility="invisible" />


</RelativeLayout>
