<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ProgressBar
        android:id="@+id/profile_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/STANDART_PADDING">

        <TextView
            style="@style/EditProfileTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/EMAIL"/>

        <TextView
            android:id="@+id/user_email_text_view"
            style="@style/EditProfileTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="left"
            android:text="@string/EMAIL"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/STANDART_PADDING">

        <TextView
            style="@style/EditProfileTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/YOUR_NAME"/>

        <EditText
            android:id="@+id/user_name_edit_profile"
            style="@style/EditProfileInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/STANDART_PADDING">

        <TextView
            style="@style/EditProfileTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/YOUR_SURNAME"/>

        <EditText
            android:id="@+id/user_surname_edit_profile"
            style="@style/EditProfileInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/STANDART_PADDING">

        <TextView
            style="@style/EditProfileTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/YOUR_AGE"/>

        <EditText
            android:id="@+id/age_edit_profile"
            style="@style/EditProfileInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:inputType="number"/>

    </LinearLayout>


    <RadioGroup
        android:id="@+id/sex_edit_profile_radio_group"
        style="@style/EditBlockStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/BIG_PADDING"
        android:paddingTop="@dimen/BIG_PADDING">

        <RadioButton
            android:id="@+id/male_edit_profile_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingRight="@dimen/BIG_PADDING"
            android:text="@string/MALE"
            android:textColor="?attr/primaryTextColor"/>

        <RadioButton
            android:id="@+id/female_edit_profile_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingRight="@dimen/BIG_PADDING"
            android:text="@string/FEMALE"
            android:textColor="?attr/primaryTextColor"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/STANDART_PADDING">

        <TextView
            style="@style/EditProfileTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/NEW_PASSWORD"/>

        <EditText
            android:id="@+id/first_password_edit_profile"
            style="@style/EditProfileInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/STANDART_PADDING">

        <TextView
            style="@style/EditProfileTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/CONFIRM_PASSWORD"/>

        <EditText
            android:id="@+id/second_password_edit_profile"
            style="@style/EditProfileInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/save_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:enabled="true"
        android:text="@string/SAVE_PROFILE"
        android:textColor="?attr/primaryTextColor"
        android:textSize="@dimen/NORMAL_TEXT_SIZE"
        android:visibility="invisible"/>
</LinearLayout>